[package]
name = "esolangs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainfuck-common = { path = "./crates/brainfuck-common" }
brainfuck-macro = { path = "./crates/brainfuck-macro" }
tinyvec = { version = "1.5.0", features = ["alloc", "rustc_1_55"] }
memchr = { version = "2.4.1", features = ["std"] }

[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = true

