[package]
name = "brainfuck-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainfuck-common = { path = "../brainfuck-common" }
tinyvec = { version = "1.5.0", features = ["alloc", "rustc_1_55"] }
